# line-counter

./: Cargo.toml  README.md  install.sh
.github/workflows/: publish.yml
docs/: CNAME  index.md  test.md
src/: main.rs
src/counter/: calc.rs  mod.rs
src/files/: mod.rs
src/printer/: mod.rs
